@@ -1,5 +1,8 @@
 = Changelog
 
+* Backend
+  ** Add new configuration field `source-url`.
+
 == `0.11.0.1`
 
 * Frontend
